TAG: vocload-6-0-21-1
DATE: 07/05/2022
STAFF: lec
wts2-921/TSS_Region (SO:0001240) is obsolete

TAG: vocload-6-0-19-1
TAG: vocload-6-0-18-8
DATE: 04/07/2022, 04/11/2022
STAFF: lec
wts2-847/Incorporate colons into Theiler Stage designations (TS:#)

TAG: vocload-6-0-18-7
TAG: vocload-6-0-18-6
DATE: 03/22/2022, 03/24/2022
STAFF: lec
cre2022/biotype_vista.config, biotype_ensemblreg.config

TAG: vocload-6-0-18-5
TAG: vocload-6-0-18-4
DATE: 03/07/2022, 03/15/2022
STAFF: lec
wts2-811/vocload/emap/improve deleting emaps time
this hung up on Production, so commented out
#${PG_MGD_DBSCHEMADIR}/key/VOC_Term_drop.object
#${PG_MGD_DBSCHEMADIR}/key/VOC_Term_create.object

TAG: vocload-6-0-18-3
TAG: vocload-6-0-18-2
DATE: 02/21/2022, 02/27/2022
STAFF: lec
wts2-767/mgi_notechunk/mgi_note merge + autosequence

TAG: vocload-6-0-18-1
DATE: 01/10/2022
STAFF: sc
CHANGES: merge YAKS branch to trunk

TAG: vocload-6-0-16-9
DATE: 02/15/2021
STAFF: dbm
CHANGES: TR13414: loadTerms.py - no quotes around synonyms in the bcp file

TAG: vocload-6-0-16-8
DATE: 01/06/2021
STAFF: dbm
CHANGES: Configuration.default - Added LOG_SQL setting

TAG: vocload-6-0-16-7
TAG: vocload-6-0-16-6
TAG: vocload-6-0-16-5
DATE: 09/28/2020
STAFF: lec
CHANGES: 
fix OMIM.config/copy OMIMtermcheck to archive

TAG: vocload-6-0-16-4
DATE: 09/23/2020
STAFF: lec
CHANGES: TR13072/ignore OBO/alt_id when processing Disease Ontology

TAG: vocload-6-0-16-3
DATE: 09/14/2020
STAFF: lec
CHANGES: TR13339/DO/exclude "{http:xxx}" from xref

TA: vocload-6-0-16-2
DATE: 09/14/2020
STAFF: lec
CHANGES: TR12571/MP.config/change _notetype_key = 1000

TAG: vocload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: vocload-6-0-15-3
TAG: vocload-6-0-15-2
DATE: 04/14/2020
STAFF: sc
CHANGES: chgrp mgi input file after removing terms from tag below
    so Terry may publish new file

TAG: vocload-6-0-15-1
DATE: 03/26/2020
STAFF: lec 
CHANGES: 